tests/positive/basic_tokenization_typical.em
int main() {
bool b = true;
float f = 3.14;
char c = 'a';
string s = "hello";
return 0;
}