tests/negative/basic_tokenization_complex.em
int main() {
char c = 'ab';
string s = "unclosed string;
return 0;
}